[package]
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]
edition = "2018"
name = "aactor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.50"
bidirectional-channel = "0.2.3"
bimap = "0.6.1"
futures = "0.3.15"
thiserror = "1.0.25"

[dev-dependencies]
async-std = {version = "1.9.0", features = ["attributes"]}
futures = "0.3.15"
log = "0.4.14"
pretty_env_logger = "0.4.0"
