[package]
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]
edition = "2018"
name = "udp-async-stream"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "1.4.1"
async-std = "1.9.0"
async-trait = "0.1.50"
bidirectional-channel = "0.2.3"
bimap = "0.6.1"
derive_more = "0.99.14"
futures = "0.3.15"
log = "0.4.14"
thiserror = "1.0.25"

[dev-dependencies]
async-std = {version = "1.9.0", features = ["attributes"]}
futures = "0.3.15"
pretty_env_logger = "0.4.0"
